--- a/src/pages/convert/[source]-to-[target].astro
+++ b/src/pages/convert/[source]-to-[target].astro
@@ -19,6 +19,7 @@ interface Params {
 }
 
 export async function getStaticPaths() {
+  process.env.NODE_TLS_REJECT_UNAUTHORIZED = '0';
   const response = await fetch(
     `${import.meta.env.PUBLIC_API_URL || "/api"}/supported-conversions`
   );
